--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"test": "playwright test",
+		"test:ui": "playwright test --ui",
+		"test:headed": "playwright test --headed",
+		"test:debug": "playwright test --debug",
+		"test:report": "playwright show-report"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^6.1.0",
@@ -28,6 +33,7 @@
 		"@tiptap/extension-collaboration-cursor": "^2.26.2",
 		"@tiptap/extension-typography": "^3.8.0",
 		"@tiptap/starter-kit": "^3.8.0",
+		"@tiptap/y-tiptap": "^3.0.0",
 		"@ucanto/client": "^9.0.2",
 		"@ucanto/principal": "^9.0.3",
 		"@web3-storage/w3up-client": "^17.3.0",
