--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.43.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@types/diff": "^7.0.2",
 		"@types/node": "^24.9.1",
 		"svelte": "^5.39.5",
 		"svelte-check": "^4.3.2",
@@ -37,6 +38,7 @@
 		"@ucanto/client": "^9.0.2",
 		"@ucanto/principal": "^9.0.3",
 		"@web3-storage/w3up-client": "^17.3.0",
+		"diff": "^8.0.2",
 		"y-websocket": "^3.0.0",
 		"yjs": "^13.6.27"
 	}
