cleaned up auth properly

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@
 # PUBLIC_W3UP_SERVICE_URL=https://up.web3.storage
 # PUBLIC_STORACHA_SERVICE_URL=https://storacha.network
 
+# Development mode - set to 'true' for local-only development (no cloud features required)
+# When enabled, the app will work without Storacha account setup
+PUBLIC_DEV_MODE=false
+
 # Development settings
 PUBLIC_APP_NAME=Storacha Notes
 PUBLIC_APP_VERSION=0.0.1
