--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@tiptap/core": "^3.8.0",
 		"@tiptap/extension-collaboration": "^3.8.0",
 		"@tiptap/extension-collaboration-cursor": "^2.26.2",
+		"@tiptap/extension-placeholder": "^3.13.0",
 		"@tiptap/extension-typography": "^3.8.0",
 		"@tiptap/starter-kit": "^3.8.0",
 		"@tiptap/y-tiptap": "^3.0.0",
