--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,5 @@ vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 .kiro/
 DEPLOYMENT.md
-# IMPROVEMENTS.md
+IMPROVEMENTS.md
+OPTIMIZATIONS.md
