--- a/package.json
+++ b/package.json
@@ -32,17 +32,20 @@
 		"@storacha/client": "^1.8.4",
 		"@tiptap/core": "^3.8.0",
 		"@tiptap/extension-collaboration": "^3.8.0",
-		"@tiptap/extension-collaboration-cursor": "^2.26.2",
-		"@tiptap/extension-placeholder": "^3.13.0",
+		"@tiptap/extension-collaboration-cursor": "^3.0.0",
+		"@tiptap/extension-placeholder": "^3.8.0",
 		"@tiptap/extension-typography": "^3.8.0",
 		"@tiptap/starter-kit": "^3.8.0",
-		"@tiptap/suggestion": "^3.13.0",
+		"@tiptap/suggestion": "^3.8.0",
 		"@tiptap/y-tiptap": "^3.0.0",
 		"@ucanto/client": "^9.0.2",
 		"@ucanto/principal": "^9.0.3",
 		"@web3-storage/w3up-client": "^17.3.0",
 		"diff": "^8.0.2",
+		"libp2p": "^3.1.2",
 		"tippy.js": "^6.3.7",
+		"y-protocols": "^1.0.6",
+		"y-webrtc": "^10.3.0",
 		"y-websocket": "^3.0.0",
 		"yjs": "^13.6.27"
 	}
