feat: Enhance WebRTC collaboration with configurable signaling and ICE servers

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,12 @@ PUBLIC_DEV_MODE=false
 # Development settings
 PUBLIC_APP_NAME=Storacha Notes
 PUBLIC_APP_VERSION=0.0.1
+
+# Real-time collaboration (y-webrtc)
+# Run your own signaling server with: bun run signaling
+# Or use: bun run dev:collab (runs both dev server and signaling)
+VITE_YJS_SIGNALING_SERVERS=ws://localhost:4444
+
+# ICE servers for WebRTC NAT traversal (optional, defaults to Google STUN)
+# Format: JSON array of {urls, username?, credential?} objects
+# VITE_YJS_ICE_SERVERS=[{"urls":"stun:stun.l.google.com:19302"}]
